# seattle_rs

./: .env  .env.example  Cargo.toml  docker-compose.yml
.github/workflows/: build.yml
collection/: Cargo.toml
collection-postgres/: Cargo.toml
collection-postgres/migrations/: 001_collection_schema.sql
collection-postgres/src/: add_value_into_args.rs  collection_postgres.rs  lib.rs  serialize_pg_row.rs  store_schema_query.rs
collection-postgres/tests/: collection_default.rs  collection_delete.rs  collection_get.rs  collection_insert.rs  collection_required.rs  collection_string.rs  collection_update.rs  collection_where.rs  store_postgresql.rs
collection-postgres/tests/helpers/: cleanup_table.rs  mod.rs
collection/src/: collection.rs  collection_error.rs  collection_field.rs  collections.rs  field_type.rs  json_formatter.rs  lib.rs  make_id.rs  storage.rs  storage_collection.rs  storage_collection_trait.rs  storage_error.rs  value_to_string.rs  where_attr.rs
demo_app/: Cargo.toml
demo_app/src/: main.rs
store/: Cargo.toml
store/src/: app.rs  collection_action.rs  lib.rs  main.rs  validator.rs
store/src/routes/: batch.rs  collections.rs  mod.rs
store/tests/: store_batch.rs  store_get.rs  store_insert.rs  store_unauthorized.rs  store_update.rs
store/tests/helpers/: batch_request.rs  collection_response.rs  create_request.rs  delete_request.rs  error_response.rs  get_request.rs  handle_response.rs  mod.rs  update_request.rs
