[workspace]

members = [
    "store",
    "collection",
    "collection-postgres"
]

[workspace.dependencies]
rand = "0.8"
dotenv = "0.15"
sentry = "0.31"
anyhow = "1.0"
chrono = "0.4"
tracing = "0.1"
actix-web = "4.3"
thiserror = "1.0"
actix-http = "3.3"
serde_json = "1.0"
async-trait = "0.1"
actix-web-httpauth = "0.8"
tracing-subscriber = "0.3"
collection = { path = "collection" }
serde = { version = "1.0", features = ["derive"] }
collection-postgres = { path = "collection-postgres" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "chrono", "json"] }
