[workspace]

members = [
    "store",
    "collection",
    "collection-postgres",
    "demo_app"
]

resolver = "2"

[workspace.dependencies]
vivalaakam_seattle_store = { path = "store" }
vivalaakam_seattle_collection = { path = "collection" }
vivalaakam_seattle_collection_postgres = { path = "collection-postgres" }
