[package]
name = "collection-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
collection = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing-subscriber = { workspace = true }
sql_query_builder = { version = "1.0", features = ["postgresql"] }
