[package]
name = "vivalaakam_seattle_collection"
version = "0.1.0"
edition = "2021"
authors = ["Andrey Makarov <viva.la.akam@gmail.com>"]
description = "Collection provider"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
anyhow = "1.0"
chrono = "0.4"
thiserror = "1.0"
serde_json = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
