[package]
name = "demo_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sentry = "0.32"
dotenv = "0.15"
tracing = "0.1"
actix-web = "4.4"
tracing-subscriber = "0.3"
vivalaakam_seattle_store = "0.1.0"
vivalaakam_seattle_collection = "0.1.0"
vivalaakam_seattle_collection_postgres = "0.1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
