[package]
name = "store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "metadata"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
sentry = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
actix-web = { workspace = true }
actix-http = { workspace = true }
collection = { workspace = true }
serde_json = { workspace = true }
actix-web-httpauth = { workspace = true }
tracing-subscriber = { workspace = true }
collection-postgres = { workspace = true }
